# GLSL-Debugger

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.TXT  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  common.mk  cover.sh  glsldebug.sln  glsldebug_1.1.5_linux.tar.bz2
GLSLCompiler/: CMakeLists.txt  Makefile  README.txt
GLSLCompiler/compiler/: CMakeLists.txt  InitializeDll.cpp  InitializeDll.h  Makefile  compiler.vcproj  compiler.vcxproj
GLSLCompiler/glslang/: CMakeLists.txt  MachineIndependent.output  Makefile
GLSLCompiler/glslang/DebugCodeGen/: CMakeLists.txt  DebugCodeGen.vcproj  DebugCodeGen.vcxproj  DebugJump.cpp  DebugVar.cpp  IntermStack.cpp  IntermStack.h  Makefile
GLSLCompiler/glslang/GenericCodeGen/: CMakeLists.txt  CodeGen.cpp  CodeInsertion.cpp  CodeInsertion.h  CodeTools.cpp  CodeTools.h  GenericCodeGen.vcproj  GenericCodeGen.vcxproj  Link.cpp  Makefile
GLSLCompiler/glslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  InfoSink.h  PoolAlloc.h  ShHandle.h  Types.h  intermediate.h
GLSLCompiler/glslang/MachineIndependent/: CMakeLists.txt  InfoSink.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  MMap.h  MachineIndependent.vcproj  MachineIndependent.vcxproj  Makefile  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  QualifierAlive.cpp  RemoveTree.cpp  ShaderLang.cpp  SymbolTable.cpp  SymbolTable.h  glslang.l  glslang.tab.c  glslang.tab.h  glslang.y  intermOut.cpp  localintermediate.h  parseConst.cpp  postProcess.sh
GLSLCompiler/glslang/OSDependent/: CMakeLists.txt
GLSLCompiler/glslang/Public/: ResourceLimits.h  ShaderLang.h
GLSLCompiler/tools/: README.txt
glsldb/: CMakeLists.txt  FunctionsMap.cpp  FunctionsMap.h  Makefile  aboutBox.cpp  aboutBox.qt.h  attachToProcess.cpp  attachToProcess.qt.h  attachToProcessDialog.cpp  attachToProcessDialog.qt.h  colors.qt.h  compilerErrorDetails.cpp  compilerErrorDetails.qt.h  compilerErrorDialog.cpp  compilerErrorDialog.qt.h  curveView.cpp  curveView.qt.h  dbgShaderView.cpp  dbgShaderView.qt.h  debuglib.h  editCallDialog.cpp  editCallDialog.qt.h  errorCodes.cpp  errorCodes.h  fragmentTestDialog.cpp  fragmentTestDialog.qt.h  functionCall.cpp  functionCall.h  geoShaderDataModel.cpp  geoShaderDataModel.qt.h  geoShaderTreeItems.cpp  geoShaderTreeItems.qt.h  glCallStatistics.cpp  glCallStatistics.qt.h  glScatter.cpp  glScatter.qt.h  glTraceFilterModel.cpp  glTraceFilterModel.qt.h  glTraceListModel.cpp  glTraceListModel.qt.h  (+61 more)
glsldb/DebugFunctions/: CMakeLists.txt  DebugFunctions.def  DebugFunctions.vcproj  DebugFunctions.vcxproj  Makefile  glEnd.c  glEnd.def
glsldb/DebugLib/: CMakeLists.txt  DebugLib.vcproj  DebugLib.vcxproj  Makefile  Makefile.mk  TODO  argumentListTools.pl  argumentListTools.pm  beginEndFunctionTestTool.vcproj  beginEndFunctionTestTool.vcxproj  debugClient.c  debuglib.def  debuglib.h  debuglibExport.h  debuglibInternal.h  error.c  functionsAllowedInBeginEnd.pl-GeForce_9300M_GS_PCI_SSE2-3.2.0_NVIDIA_195.30  functionsAllowedInBeginEnd.pl-local  genArgSizeFuncs.pl  genArgSizeFuncsPrototypes.pl  genBeginEndFunctionTest.pl  genFunctionHooks.pl  genFunctionList.pl  genFunctionPointerTypes.pl  genGetProcAddressHook.pl  genReplayFunc.pl  genTools.pm  genTrampolines.pl  gen_ArgSizeFuncs.pl  glenumerants.c  glenumerants.vcproj  glenumerants.vcxproj  glstate.c  glstate.h  hooks.c  initLib.c  initLib.h  justCopyPointersList.pl  libdlsym.c  libglsldebug.c  (+20 more)
glsldb/DebugLib/generator/: ArgSizeFuncs.pl  BeginEndFunctionTest.pl  CMakeLists.txt  Enumerants.pl  FunctionHooks.pl  FunctionList.pl  FunctionPointerTypes.pl  (+11 more)
glsldb/GL/: WinGDI.h  gl.h  glext.h  glx.h  glxext.h  wglext.h
glsldb/cursors/: pick.psd  pick1.psd  zoom.psd
glsldb/doc/: credits.txt  license.txt
glsldb/glenumerants/: CMakeLists.txt  Makefile  genEnumerants.pl  genGLXEnumerants.pl  genWGLEnumerants.pl  gen_enumerants.pl  glenumerants.c  glenumerants.h  glxenumerants.c  wglenumerants.c  wglenumerants.h
glsldb/glh/: glh_extensions.h  glh_genext.h
glsldb/icons/: crosshair.psd  gl_green.AVA  prog_blue.AVA  shader_black.AVA  shader_red.AVA
glsldb/shaders/: pointbased_spheres.fp  pointbased_spheres.vp
glsldb/ui/: Makefile  aboutBox.ui  attachToProcessDialog.ui  compilerErrorDetails.ui  compilerErrorDialog.ui  dbgShaderView.ui  editCallDialog.ui  fragmentTestDialog.ui  fragmentTestDialog_withMasks.ui  glTraceSettingsDialog.ui  jumpToDialog.ui  loopDialog.ui  mainWindow.ui  openProgramDialog.ui  selectionDialog.ui  testcustom.ui.removeme  testcustom2.ui  watchGeoDataTree.ui  watchScalar.ui  watchTable.ui  watchVector.ui  watchViewDialog.ui
glsldb/utils/: CMakeLists.txt  Makefile  build-config.h  common.h  dbgprint.c  dbgprint.h  dlutils.c  dlutils.h  getopt.c  hash.c  hash.h  notify.c  notify.h  osx_ptrace_defs.h  p2pcopy.c  p2pcopy.h  pfm.c  pfm.h  sync.c  sync.h  utils.vcproj  utils.vcxproj
mesa-glsl/: CMakeLists.txt  STATUS
mesa-glsl/glsl/: CMakeLists.txt  ast.h  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  ast_visitor.cpp  ast_visitor.h  builtin_types.cpp  glsl_lexer.ll  glsl_parser.yy  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_symbol_table.h  hir_field_selection.cpp  ir.cpp  ir.h  ir_clone.cpp  ir_constant_expression.cpp  ir_hierarchical_visitor.cpp  ir_hierarchical_visitor.h  ir_hv_accept.cpp  ir_optimization.h  ir_print_visitor.cpp  ir_print_visitor.h  ir_unused_structs.cpp  ir_visitor.h  link_uniform_blocks.cpp  linker.cpp  linker.h  list.h  lower_jumps.cpp  main.cpp
mesa-glsl/include/: ShaderLang.h
mesa-glsl/interface/: AstScope.cpp  AstScope.h  AstStack.cpp  AstStack.h  Changeable.cpp  CodeGen.cpp  CodeInsertion.cpp  CodeInsertion.h  CodeTools.cpp  CodeTools.h  DebugVar.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderHolder.h  SymbolTable.cpp  SymbolTable.h  Variable.cpp  asprintf.h
mesa-glsl/mesa/: CMakeLists.txt
mesa-glsl/tests/: CMakeLists.txt  Format.h  Rules.h  ShaderInput.cpp  ShaderInput.h  TODO  ast_nodes.h  call_visitor.cpp  call_visitor.h  cover.sh  generate_shader_checker.sh  locations.cpp  misc.cpp  misc.h  runner.cpp  test.frag
(+282 files in other folders)
